--- a/asst1-src/kern/asst1/Makefile
+++ b/asst1-src/kern/asst1/Makefile
@@ -1,5 +1,11 @@
+make:
+	cd ../compile/ASST1 && bmake && bmake install
+
 run:
-	cd ../../../root && sys161 -w kernel "1a"
+	cd ../../../root && sys161 kernel $(args)
+
+run-gdb:
+	cd ../../../root && sys161 -w kernel $(args)
 
 gdb:
 	cd ../../../root && os161-gdb kernel
