improved makefile and added header quards to quicksort.h

--- a/asst1-src/kern/asst1/Makefile
+++ b/asst1-src/kern/asst1/Makefile
@@ -1,11 +1,15 @@
 make:
-	cd ../compile/ASST1 && bmake && bmake install
+	cd ../compile/ASST? && bmake && bmake install
 
 run:
-	cd ../../../root && sys161 kernel $(args)
+	cd ../../../root && sys161 kernel "$(args)"
 
 run-gdb:
-	cd ../../../root && sys161 -w kernel $(args)
+	cd ../../../root && sys161 -w kernel "$(args)"
 
 gdb:
 	cd ../../../root && os161-gdb kernel
+
+conf:
+	cd ../../ && ./configure && cd kern/conf && ./config ASST? && \
+	cd ../compile/ASST? && bmake depend && bmake && bmake install
