open stdout/err

--- a/asst2-src/Makefile
+++ b/asst2-src/Makefile
@@ -80,8 +80,7 @@ a:
 	bmake k && bmake u
 
 q:
-	`bmake k && bmake u` > /dev/null
-
+	bmake k && bmake u > /dev/null
 
 run: # Run kernel
 	cd ../root && sys161 kernel "p /testbin/asst2"
