--- a/asst2-src/Makefile
+++ b/asst2-src/Makefile
@@ -80,7 +80,7 @@ a:
 	bmake k && bmake u
 
 q:
-	bmake k && bmake u > /dev/null
+	bmake k > /dev/null && bmake u > /dev/null
 
 run: # Run kernel
 	cd ../root && sys161 kernel "p /testbin/asst2"
