asst3: add our handy dandy bmake commands

--- a/asst3-src/Makefile
+++ b/asst3-src/Makefile
@@ -70,3 +70,30 @@ install: $(OSTREE)
 # old BSD name, same as distclean
 cleandir: distclean
 .PHONY: cleandir
+
+k: # Build kernel
+	cd kern/compile/ASST3 && bmake && bmake install
+u: # Build userland
+	bmake && bmake install
+
+a:
+	bmake k && bmake u
+
+q:
+	bmake k > /dev/null && bmake u > /dev/null
+
+run: # Run kernel
+	cd ../root && sys161 kernel "p /bin/true"
+	# cd ../root && sys161 kernel "$(args)"
+
+conf: # Full reconfigure
+	./configure && \
+	bmake && bmake install && \
+	cd kern/conf && ./config ASST3 && \
+	cd ../compile/ASST3 && bmake depend && bmake && bmake install
+
+domconf: # CONF WITH DOM'S SILLY DIRECTORY SYSTEM
+	./configure --ostree='~/Documents/comp3231/assignments/root' && \
+	bmake && bmake install && \
+	cd kern/conf && ./config ASST3 && \
+	cd ../compile/ASST3 && bmake depend && bmake && bmake install
