--- a/asst3-src/Makefile
+++ b/asst3-src/Makefile
@@ -83,11 +83,11 @@ q:
 	bmake k > /dev/null && bmake u > /dev/null
 
 run: # Run kernel
-	cd ../root && sys161 kernel "p /bin/true"
+	cd ../root && sys161 kernel #"p /bin/true"
 	# cd ../root && sys161 kernel "$(args)"
 
 debug: # run kernel with tlb trace debugging info
-	cd ../root && trace161 -tt kernel
+	cd ../root && trace161 -tt kernel "p /bin/true"
 
 conf: # Full reconfigure
 	./configure && \
